feat: bump feat version

--- a/.github/release-drafter-config.yml
+++ b/.github/release-drafter-config.yml
@@ -39,6 +39,9 @@ autolabeler:
   - label: 'enhancement'
     branch:
       - '/feature\/.+/'
+      - '/feat\/.+/'
+    title:
+      - '/feat:.+/'
 template: |
   ## Changes
 
