--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,13 @@
-name: Release
+name: Build and release
 
 on:
   push:
+    branches:
+      - main
   pull_request:
-    types: [opened]
+    types:
+      - opened
+      - synchronize
 
 env:
   environment: test
@@ -69,6 +73,7 @@ jobs:
             README.md
 
   update-release-draft:
+    name: Update release drafter
     if: github.ref == 'refs/heads/main'
     permissions:
       contents: write
@@ -85,6 +90,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   release:
+    name: Release to NPM
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: update-release-draft
