ci: add github action

--- a/packages/demo/repo-config.json
+++ b/packages/demo/repo-config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./schema.json",
   "configs": {
-    "basics": {
+    "github/info": {
       "description": "Hello World"
     }
   }
