--- a/packages/git-law/package.json
+++ b/packages/git-law/package.json
@@ -27,7 +27,10 @@
       "import": "./dist/built-in/rules/*.js"
     },
     "./actions/*": {
-      "import": "./dist/built-in/rules/*"
+      "import": "./dist/built-in/rules/*.js"
+    },
+    "./reporters/*": {
+      "import": "./dist/built-in/reporters/*.js"
     }
   },
   "devDependencies": {
